# FastAPI-Demo

./: Dockerfile  docker-compose.yml  main.py  pyproject.toml
