[tool.pdm]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "JeremyLP", email = "jeremyleprunenec.pro@gmail.com"},
]
dependencies = [
    "fastapi>=0.95.0",
    "uvicorn>=0.21.1",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[tool.pdm.scripts]
start = "uvicorn main:app --reload"